Bug 464453 - Sticky keys: "Disable when two keys are held down" doesn't work on Wayland
Summary: Sticky keys: "Disable when two keys are held down" doesn't work on Wayland
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_accessibility (other bugs)
Version First Reported In: 5.26.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Gunnar Schmidt
URL:
Keywords: accessibility, wayland-only
Depends on:
Blocks: 444335
  Show dependency treegraph
 
Reported: 2023-01-18 13:55 UTC by Nicolas Fella
Modified: 2024-07-26 19:38 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2023-01-18 13:55:29 UTC
Follow-up from https://bugs.kde.org/show_bug.cgi?id=444335
Comment 1 Bug Janitor Service 2024-07-23 14:48:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6164
Comment 2 Nicolas Fella 2024-07-25 12:33:04 UTC
Git commit e3ad1fa04f73424fde3bd5e44fdf5998c35653e3 by Nicolas Fella.
Committed on 25/07/2024 at 12:22.
Pushed by nicolasfella into branch 'master'.

plugins/stickykeys: Disable when two keys are pressed

M  +65   -0    autotests/integration/sticky_keys_test.cpp
M  +23   -0    src/plugins/stickykeys/stickykeys.cpp
M  +3    -0    src/plugins/stickykeys/stickykeys.h

https://invent.kde.org/plasma/kwin/-/commit/e3ad1fa04f73424fde3bd5e44fdf5998c35653e3