plugins/stickykeys: Disable when two keys are pressed

BUG: 464453