src/plugins/stickykeys/stickykeys.h
@@ -27,10 +27,13 @@ public:
 
 private:
     void loadConfig(const KConfigGroup &group);
+    void disableStickyKeys();
 
     KConfigWatcher::Ptr m_configWatcher;
     QMap<int, KeyState> m_keyStates;
     QList<int> m_modifiers = {Qt::Key_Shift, Qt::Key_Control, Qt::Key_Alt, Qt::Key_AltGr, Qt::Key_Meta};
     bool m_lockKeys = false;
     bool m_showNotificationForLockedKeys = false;
+    bool m_disableOnTwoKeys = false;
+    QSet<int> m_pressedModifiers;
 };
